--- a/index.ipynb
+++ b/index.ipynb
@@ -136,9 +136,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "line function",
+         "type": "scatter",
+         "uid": "997ad58c-75c9-11e9-84e2-abd7ca49f3ab",
+         "x": [
+          0,
+          100,
+          200,
+          400
+         ],
+         "y": [
+          100,
+          250,
+          400,
+          700
+         ]
+        },
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "997ad7a8-75c9-11e9-84e2-abd7ca49f3ab",
+         "x": [
+          0,
+          100,
+          200,
+          400
+         ],
+         "y": [
+          100,
+          150,
+          600,
+          700
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"37db475c-f664-4c93-ba8d-3b6ba0010240\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"37db475c-f664-4c93-ba8d-3b6ba0010240\", [{\"mode\": \"lines\", \"name\": \"line function\", \"x\": [0, 100, 200, 400], \"y\": [100.0, 250.0, 400.0, 700.0], \"type\": \"scatter\", \"uid\": \"999c615c-75c9-11e9-84e2-abd7ca49f3ab\"}, {\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 100, 200, 400], \"y\": [100, 150, 600, 700], \"type\": \"scatter\", \"uid\": \"999c6350-75c9-11e9-84e2-abd7ca49f3ab\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"37db475c-f664-4c93-ba8d-3b6ba0010240\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"37db475c-f664-4c93-ba8d-3b6ba0010240\", [{\"mode\": \"lines\", \"name\": \"line function\", \"x\": [0, 100, 200, 400], \"y\": [100.0, 250.0, 400.0, 700.0], \"type\": \"scatter\", \"uid\": \"999c615c-75c9-11e9-84e2-abd7ca49f3ab\"}, {\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 100, 200, 400], \"y\": [100, 150, 600, 700], \"type\": \"scatter\", \"uid\": \"999c6350-75c9-11e9-84e2-abd7ca49f3ab\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import m_b_trace, plot, trace_values\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
